fixed spacing on gallery ul and added id gallery li and styles

--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ p {
 
 /*-----------Image Gallery--------*/
 
-#gallery ul{
+#gallery ul {
 	border: 1px dashed #fff;
 	list-style-type: none;
 	width: 527px;
@@ -101,4 +101,10 @@ p {
 	overflow: hidden;
 	padding: 5px;
 }
+
+#gallery li {
+	float: left;
+	margin-left: 19px;
+}
+
 /*----------End of Image Gallery----*/
